--- a/DR music/DR music.vcxproj
+++ b/DR music/DR music.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{48e374b2-6d13-4502-9094-98de43c2da79}</ProjectGuid>
     <RootNamespace>DRmusic</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Deltarune Music Manager</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
